add cors new import module
